// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wrappers / Section Unit shall pass unit sanity test | no footer slot 1`] = `
"<section class="section">
  <div data-test="wrappers-section-header" class="section__header">This is header slot test</div>
  <div class="section__inner">This is default slot test</div>
  <!---->
</section>"
`;

exports[`Wrappers / Section Unit shall pass unit sanity test | no header slot 1`] = `
"<section class="section">
  <!---->
  <div class="section__inner">This is default slot test</div>
  <div data-test="wrappers-section-footer" class="section__footer">This is footer slot test</div>
</section>"
`;
